--- a/PlannedFlight/PlannedFlight.vcxproj
+++ b/PlannedFlight/PlannedFlight.vcxproj
@@ -143,11 +143,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="flightplan.hpp" />
+    <ClInclude Include="flightPlanValidator.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="plannedflight.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="flightplan.cpp" />
+    <ClCompile Include="flightPlanValidator.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
