--- a/PlannedFlight/PlannedFlight.vcxproj.filters
+++ b/PlannedFlight/PlannedFlight.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClInclude Include="plannedflight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="flightplan.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="flightPlanValidator.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="plannedflight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="flightplan.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="flightPlanValidator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
